# LumenPOS

./: .gitignore  README.md  license.txt  pyproject.toml
docs/: case-study.md  marketplace-listing.md  user-guide.md  vpos-backport-guide.md  vpos-register-fix.md  website-guide.md
frontend/: index.html  package-lock.json  package.json  parity-check.mjs  vite.config.js
frontend/src/: App.vue  api.js  customerDisplay.js  format.js  i18n.js  main.js  messages.js  offline.js  promotions.js  scanGuard.js  styles.css  theme.js
frontend/src/components/: ApprovalsModal.vue  CartLine.vue  CartPanel.vue  CustomerModal.vue  ExchangeModal.vue  Icon.vue  LinkPicker.vue  LockOverlay.vue  NavRail.vue  OfflineLogModal.vue  OpenRegisterOverlay.vue  ParkedSalesModal.vue  PasscodeModal.vue  PaymentBrand.vue  PaymentOverlay.vue  PriceCheckModal.vue  PriceListEditor.vue  ProductGrid.vue  ReceiptModal.vue  ReceiptView.vue  RefundModal.vue  SellGiftCardModal.vue  SerialModal.vue  XReportModal.vue
frontend/src/stores/: cart.js  catalog.js  session.js
frontend/src/views/: CustomerDisplayView.vue  CustomersView.vue  HistoryView.vue  RegisterView.vue  SellView.vue  SettingsView.vue
lumenpos/: coupons.py  gift_cards.py  hooks.py  install.py  internal_accounts.py  modules.txt  patches.txt  price_books.py  store_credit.py
lumenpos/api/: approval_requests.py  audit.py  catalog.py  customers.py  exchanges.py  loyalty.py  permissions.py  printing.py  register.py  sales.py  session.py  settings.py
lumenpos/promotions/: engine.py  loader.py  test_engine.py
lumenpos/www/: pos.html  pos.py
(+59 files in other folders)
