[project]
name = "lumenpos"
authors = [
    { name = "Lumen Solutions", email = "support@lumen-solutions.co" },
]
description = "Professional, multi-business Point of Sale for ERPNext / Frappe (LumenPOS)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
